added structure and images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
         </head>
 
         <body>
-            
+            <nav class="zone sticky">
+                <ul class="main-nav">
+                    <li><a href="">About</a></li>
+                    <li><a href="">Projects</a></li>
+                    <li class="right"><a href="">Contact</a></li>
+                </ul>
+            </nav>
+
+            <div class="father">
+                
+                <img class="cover" src="./assets/images/Father.jpg" alt="Kevin Centeno" />
+
+            </div>
+
+            <div class="grid-wrapper">
+                <div class="box zone"><img src="./assets/images/Juno.jpg" alt="Kevin Jr Centeno" /></div>
+                <div class="box zone"><img src="./assets/images/Ebash.jpg" alt="Eevah Ruby Centeno" /></div>
+                <div class="box zone"><img src="./assets/images/Joyee.jpg" alt="Adallyn Joy Centeno" /></div>
+                <div class="box zone"><img src="./assets/images/Bee.jpeg" alt="Brooklyn" /></div>
+            </div>
+
+            <footer>Footer</footer>
 
         </body>
     </html>
